--- a/2021-1/practicos/Practico5.tex
+++ b/2021-1/practicos/Practico5.tex
@@ -226,7 +226,7 @@ Un  grafo planar divide al plano en \textit{regiones} delimitadas por aristas, p
 \end{itemize}
 Para todo grafo planar vale el famoso \textit{teorema de Euler para poliedros} que dice 
 \begin{equation}\label{formula-de-euler}
-    C + V = A + 2, \tag{*}
+    C + V - A = 2, \tag{*}
 \end{equation}
 donde $C$ es el número de regiones (en el caso de poliedros, caras), $A$ es el número de aristas y $V$ es el número de vértices.
 
@@ -234,7 +234,24 @@ Comprobar que los grafos (a), (b) y (d) del ejercicio  \ref{ej-grafos-a-ady} sat
 
 \item Demostrar que el grafo (d) del ejercicio \ref{ej-ady-a-grafos} es planar y comprobar la fórmula de Euler.
 
-\item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para cuáles valores de $n$ se puede encontrar un dibujo de $K_n$ con la propiedad que las líneas representan las aristas sin cruzarse?
+\item  ¿Cuántas aristas tiene el  grafo completo $K_n$? ¿Para qué valores de $n$ se puede afirmar que $K_n$ es planar?
+
+\item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
+\begin{enumerate}
+\begin{minipage}{0.25 \textwidth}
+\item $3,3,1,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $3,2,2,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $3,3,2,2,1,1$\end{minipage}
+
+\begin{minipage}{0.25 \textwidth}
+\item $4,1,1,1,1$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $7,3,3,3,2,2$\end{minipage}
+\begin{minipage}{0.25 \textwidth}
+\item $4,1,1,1$\end{minipage}
+\end{enumerate}
 
 
 \item Encuentre un isomorfismo entre los grafos por las siguientes listas. (Ambas listas especifican versiones de un famoso grafo conocida como {\it grafo de Petersen}.)
@@ -260,27 +277,7 @@ $$
 \end{enumerate}
 
 
-\item Para cada una de las siguientes secuencias, encuentre un grafo que tenga exactamente las valencias indicadas o demuestre que tal grafo no existe:
-\begin{enumerate}
-\begin{minipage}{0.25 \textwidth}
-\item $3,3,1,1$\end{minipage}
-\begin{minipage}{0.25 \textwidth}
-\item $3,2,2,1$\end{minipage}
-\begin{minipage}{0.25 \textwidth}
-\item $3,3,2,2,1,1$\end{minipage}
-
-\begin{minipage}{0.25 \textwidth}
-\item $4,1,1,1,1$\end{minipage}
-\begin{minipage}{0.25 \textwidth}
-\item $7,3,3,3,2,2$\end{minipage}
-\begin{minipage}{0.25 \textwidth}
-\item $4,1,1,1$\end{minipage}
-\end{enumerate}
-
-
 \item Demuestre que los siguientes pares de grafos son isomorfos (encuentre un isomorfismo):
-
-
 
 
 
