--- a/2021-1/tareas/tarea_04.tex
+++ b/2021-1/tareas/tarea_04.tex
@@ -140,31 +140,25 @@
 	
 	
 	\tarea{4}
-	
-	\begin{ejercicio}
-		
-		\noindent Un banco tiene que elegir un equipo directivo de $5$ personas entre un grupo de $8$ personas, de las cuales $3$ son hombres 
-		\textbf{A}, \textbf{E}, \textbf{O} y $5$ mujeres \textbf{X}, \textbf{Y}, \textbf{Z}, \textbf{V}, \textbf{W}  
-		¿De cuántas formas puede hacerse la elección si:
-		
-		\begin{enumerate}
-			\item[(a)] no hay restricciones?
-			
-			\item[(b)] se eligen tres mujeres y dos hombres?
-		\end{enumerate}
-		
-		\noindent Si ahora en el equipo directivo las personas deben cumplir roles distintos, es decir, se requiere elegir los $5$ cargos
-		directivos: director(a), subdirector(a), interventor(a), cajero(a) y cobrador(a); 
-		¿De cuántas formas puede hacerse la elección si:
-		
-		\begin{enumerate}
-			
-			\item[(c)] se eligen los tres hombres?
-			
-			\item[(d)] los hombres \textbf{A} y \textbf{E} no pueden estar juntos en la misma elección?
-		\end{enumerate}
-		
-	\end{ejercicio}
+    \begin{ejercicio}
+        \begin{enumerate}
+            \item[1.] (80 pts)  ¿De cuántas formas distintas se pueden escoger $5$  cartas de una baraja de $52$ cartas?
+            \begin{enumerate}
+                \item (20 pts) Si no hay restricciones.
+                \item (30 pts) Si debe haber tres picas y dos corazones.
+                \item (30 pts) Si debe haber al menos una carta de cada palo.
+                %\item (30 pts) Si de haber al menos $3$ picas.  
+            \end{enumerate} 
+            
+           \vskip .2cm
+
+            
+            \item[2.] (20 pts) Probar la siguiente igualdad:
+            $$
+            n = \frac{n! + (n+2)! - n(n+2)(n-1)!}{n!+(n-1)!+(n+1)!}.
+            $$
+        \end{enumerate}
+    \end{ejercicio}
 	
 	\begin{comment}
 	\begin{solucion}
